# DarwinScaffoldStudio.jl

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DEPLOYMENT_COMPLETE.md  GITHUB_RELEASE_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  Manifest.toml  NEXT_STEPS.md  PROXIMOS_PASSOS.md  Project.toml  README.md  RELEASE_NOTES.md  RELEASE_v3.4.0.md  SECURITY.md  SOTA_PLUS_PLUS_PLUS.md  SUCCESS_REPORT.md  SYNC_STATE.json  UPGRADE_COMPLETE.md  WHATS_MISSING.md
.blackboxcli/: settings.json
.claude/: settings.json
.darwin/agents/: auto-deploy.sh  darwin-omniscient-agent.sh
.darwin/configs/: .darwin-cluster.yaml
.github/workflows/: cd.yml  ci.yml  desktop.yml  k8s-deploy.yml  release.yml
data/: README.md  ScaffoldDataAnalysis.xlsx
data/pldla/: kaique_hergesel_data.md
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: DEEP_THEORY_D_EQUALS_PHI.md  MICROCT_DATASETS_CATALOG.md  NOVEL_PHYSICS_METHODOLOGY.md  PLDLA_RESEARCH_QUESTIONS_ANALYSIS.md  SOTA_COMPARISON.md  index.md  tutorial.md
examples/: minimal_example.jl  sota_plus_plus_plus_demo.jl
ext/: DarwinScaffoldStudioCUDAExt.jl
paper/: softwarex_paper.tex  softwarex_paper_v2.out  softwarex_paper_v2.tex  tortuosity_PRE_paper.tex
scripts/: build_demetrios.sh  test_sam_segmentation.py  validate_fractal_phi.py
src/: DarwinScaffoldStudio.jl
test/: measure_coverage.jl  test_core.jl  test_frontier_ai.jl  test_microct.jl  test_ontology.jl  test_optimization.jl  test_quick.jl  test_scaffold_studio.jl  test_science.jl  test_sota_modules.jl
(+199 files in other folders)
