[package]
name = "darwin-scaffold-studio"
version = "1.0.0"
description = "Premium Desktop GUI for Darwin Scaffold Studio"
authors = ["Darwin Scaffold Studio"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-minimize", "window-start-dragging", "window-set-position", "window-close", "window-set-focus", "window-hide", "window-set-fullscreen", "window-unmaximize", "window-show", "window-set-size", "window-set-title", "window-unminimize", "dialog-all", "fs-all", "http-all", "path-all", "process-exit", "process-relaunch", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
